--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <main class="wrap">
     <h1>Example Page</h1>
     <p>To confirm that everything works as it should</p>
     <p>Also, there is a picture inserted with css to test relative links in stylesheets. Am I a bold one?</p>
-    <div class="block-with-bg"></div>
+    <div class="block-with-bg">
+      <img src="assets/ben.jpg" alt="">
+    </div>
   </main>
-  <script src="/main.js"></script>
 </body>
 </html>
