Changelog 1. Add full Vue build 2. Update dependencies 3. Change markup in template 4. Tweak url to image in general.scss

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 </head>
+
 <body>
-  <main class="wrap">
-    <h1>Example Page</h1>
-    <p>To confirm that everything works as it should</p>
-    <p>Also, there is a picture inserted with css to test relative links in stylesheets. Am I a bold one?</p>
-    <div class="block-with-bg">
-      <img src="assets/ben.jpg" alt="">
-    </div>
-  </main>
+	<main class="wrap" id="app">
+		<h1>Example Page</h1>
+		<p>To confirm that everything works as it should</p>
+		<p>Also, there is a picture inserted with css to test relative links in stylesheets.</p>
+		<div class="block-with-bg"></div>
+		<p>{{hello}}</p>
+	</main>
 </body>
+
 </html>
