--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,10 +10,8 @@
   <main class="wrap">
     <h1>Example Page</h1>
     <p>To confirm that everything works as it should</p>
-    <p>Also, there is a picture inserted with css to test relative links in stylesheets. Am I a bold one?</p>
-    <div class="block-with-bg">
-      <img src="assets/ben.jpg" alt="">
-    </div>
+    <p>Also, there is a picture inserted with css to test relative links in stylesheets.</p>
+    <div class="block-with-bg"></div>
   </main>
 </body>
 </html>
